[tool.poetry]
name = "blog-generator"
version = "1.0.0"
description = "Generator for creating the Blog"
authors = ["Patrik.Hlobil <patrik.hlobil@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
click = "^8.1.3"
pyyaml = "^6.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-html = 'blog_generator.main:generate_html'


[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

[tool.ruff.isort]
force-sort-within-sections = true
