[tool.poetry]
name = "blog-generator"
version = "1.0.0"
description = "Generator for creating the Blog"
authors = ["Patrik.Hlobil <patrik.hlobil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pyyaml = "^6.0"
mkdocs = "^1.4.2"
mkdocs-awesome-pages-plugin = "^2.8.0"
beautifulsoup4 = "^4.12.2"
mkdocs-material = {version = "^9.2.0b3", allow-prereleases = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
add-link = 'tools.add_link:add_link'


[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

[tool.ruff.isort]
force-sort-within-sections = true
